Add in support for Customer view and controller, and de-generic-ify the ASP.NET template

--- a/Vidly/Vidly/Views/Home/Index.cshtml
+++ b/Vidly/Vidly/Views/Home/Index.cshtml
@@ -1,31 +1,29 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Vidly";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>VIDLY</h1>
+    <p class="lead">Vidly is an application for viewing movies and rentals.</p>
+    <p><a href="https://vidly" class="btn btn-primary btn-lg">Vidly &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Movies</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Maecenas hendrerit turpis et enim aliquam, eu tincidunt nisl dapibus. Ut at arcu elit. Cras nec tortor vitae lorem facilisis egestas nec a eros. Nunc fermentum, arcu quis eleifend ultrices, metus neque euismod ipsum, vel tincidunt dui odio vitae quam. Proin ornare malesuada dolor at tincidunt. Integer dignissim blandit suscipit. Mauris sit amet sem dictum, pretium elit sed, congue quam. Proin eget est id turpis placerat finibus. Sed congue luctus auctor. Aliquam in metus est. Sed sed imperdiet erat.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://vidly">Movies &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Customers</h2>
+        <p>Aliquam dictum lacus imperdiet, varius diam a, rutrum diam. Pellentesque hendrerit erat et volutpat aliquam. Mauris hendrerit felis id maximus laoreet. Donec sodales lorem eu nibh rutrum varius. Proin purus massa, sagittis vitae blandit at, consectetur at dui. Ut ac blandit sapien, varius tincidunt tortor. Nam tempus, justo efficitur interdum ultrices, nulla turpis placerat tellus, non aliquam ipsum nulla ut dui. Pellentesque et condimentum lectus, in dictum erat.</p>
+        <p><a class="btn btn-default" href="https://vidly">Customers &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Something Else</h2>
+        <p>Vestibulum vel ligula volutpat, malesuada magna id, ullamcorper nisi. Morbi semper felis a vestibulum pellentesque. Mauris tempor molestie justo eu condimentum. Aliquam metus risus, posuere ac leo quis, gravida venenatis libero. Integer vel mi at neque vehicula fermentum. Morbi ac viverra ante, nec scelerisque urna.</p>
+        <p><a class="btn btn-default" href="https://vidly">Something Else &raquo;</a></p>
     </div>
 </div>
