--- a/Vidly/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Vidly/Views/Shared/_NavBar.cshtml
@@ -13,8 +13,8 @@
                 @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
-                <li>@Html.ActionLink("Customers", "Customers", "Customers")</li>
-                <li>@Html.ActionLink("Movies", "Movies", "Movies")</li>
+                <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
 
             </ul>
             @Html.Partial("_LoginPartial")
