Successfully connect CustomerViewModel with CustomersController

--- a/Vidly/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Vidly/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@model Vidly.ViewModels.RandomMovieViewModel
+﻿@*@model Vidly.ViewModels.RandomMovieViewModel
+@model Vidly.ViewModels.CustomerViewModel*@
 <!DOCTYPE html>
 <html>
 <head>
