--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Vidly.ViewModels.CustomerViewModel
+﻿@using Microsoft.Ajax.Utilities
+@model Vidly.ViewModels.CustomerViewModel
 @{
     ViewBag.Title = "Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,6 +8,29 @@
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Unordered list of customers with links to customer detail</p>
 
-<h2 class="customer">@Model.Customers</h2>
+
+@*conditional class attribute*@
+@{
+    var className = Model.Customers.Count > 0 ? "some" : null;
+}
+
+@if (className.IsNullOrWhiteSpace())
+{
+    <p>There aren't any customers yet.</p>
+} else
+{
+    <table>
+        @foreach (var customer in Model.Customers)
+        {
+            <tr>
+                <td>
+                    <a href="/Details/@customer.Id" class="@className">@customer.Name</a>
+                </td>
+            </tr>
+
+        }
+    </table>
+}
+
+
