--- a/Vidly/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Vidly/Views/Customers/Details.cshtml
@@ -1,9 +1,8 @@
-﻿@model Vidly.ViewModels.CustomerDetailsViewModel
+﻿@model Vidly.Models.Customer
 @{
     ViewBag.Title = "Single Customer Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details of a single customer</h2>
+<h2>@Model.Name</h2>
 
-<p>Customer details</p>
