--- a/Vidly/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Vidly/Views/Movies/Index.cshtml
@@ -1,8 +1,18 @@
-﻿
+﻿@using Vidly.Models
+@model IEnumerable<Vidly.Models.Movie>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Movies";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Movies</h2>
 
+<table>
+    @foreach (var movie in Model)
+    {
+        <tr>
+            <td> @movie.Name
+            </td>
+        </tr>
+    }
+</table>
