--- a/Vidly/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Vidly/Views/Customers/Index.cshtml
@@ -11,10 +11,12 @@
     <p>There aren't any customers yet.</p>
 } else
 {
-    <table class="Table table-bordered  table-hover">
+    <table class="table table-bordered table-hover">
         <thead>
-        <tr>Customer</tr>
-        <tr>Discount Rate</tr>
+            <tr>
+                <th>Customer</th>
+                <th>Discount Rate</th>
+            </tr>
         </thead>
         <tbody>
             @foreach (var customer in Model)
